<resources>
    <string name="app_name">SMFE</string>
    <string name="enter_usename">Enter Usename</string>
    <string name="enter_password">Enter Password</string>
    <string name="TAC">I Accept Terms And Condition.</string>
    <string name="login">LOGIN</string>
    <string name="greeting">WELCOME TO SMFE (STUDY MATERIAL FOR ENGINEERING) HOPE! THIS WILL HELP YOU TO DO BETTER IN YOUR ACADEMICS</string>
    <string name="signup">SIGNUP</string>
    <string name="choose_your_branch">CHOOSE BRANCH</string>
    <string name="electrical_and_electronics_engineering">ELECTRICAL AND ELECTRONICS ENGINEERING</string>
    <string name="electronics_and_communication_engineering">ELECTRONICS AND COMMUNICATION ENGINEERING</string>
    <string name="computer_science_and_engineering">COMPUTER SCIENCE AND ENGINEERING</string>
    <string name="ece">ece</string>
    <string name="eee">eee</string>
    <string name="cse">cse</string>
    <string name="update_coming_soon">UPDATE COMING SOON!</string>
    <string name="search_archive">Search Archive</string>
    <string name="search">SEARCH</string>
    <string name="result_will_be_displaied_here">Result will be displaied here</string>
    <string name="by_frankmiles">By @FrankMiles</string>
    <string name="choose_semester_and_subject">Choose Semester Or Subject</string>
    <string name="_4th_sem">4th Sem</string>
    <string name="tome">TOME</string>
    <string name="_5th_sem">5th Sem</string>
    <string name="loading_please_wait">loading_please_wait</string>
    <string name="welcome">Welcome</string>
    <string name="button_continue">Syllabus</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="Register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="todo">TODO</string>
    <string name="if_you_want_something_different_you_are_going_to_have_to_have_to_do_something_different_jack_canfield">“If you want something different, you are going to have to have to do something different” – Jack Canfield</string>
    <string name="redirecting_to_whatsapp">Redirecting to WhatsApp...</string>
    <string name="the_expert_in_everything_was_once_a_beginner">The expert in everything was once a beginner.</string>
    <string name="serverRequest">Connecting to server... Sending Registration request...</string>
    <string name="registeringToServer">Registering Please wait!</string>
    <string name="progress_board">Progress Board</string>
    <string name="now_in_development_phase">Now in Development phase!</string>
    <string name="version">Version: 8.1.0</string>
    <string name="chat">CHAT</string>
    <string name="message">Message</string>
    <string name="user_name">User Name</string>
    <string name="start_chat">Start Chat</string>
</resources>
