<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectBranch">

    <TextView
        android:id="@+id/tvChooseBranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/choose_your_branch"
        android:textColor="@color/accent"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tvCSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/computer_science_and_engineering"
        android:textColor="@color/accent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ibtnCse"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/cse"
        android:contentDescription="@string/cse"
        tools:srcCompat="@drawable/cse" />

    <TextView
        android:id="@+id/tvECE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/electronics_and_communication_engineering"
        android:textColor="@color/accent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ibtnEce"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ece"
        android:contentDescription="@string/ece"
        tools:srcCompat="@drawable/ece" />

    <TextView
        android:id="@+id/tvEEE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/electrical_and_electronics_engineering"
        android:textColor="@color/accent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ibtnEee"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/eee"
        android:contentDescription="@string/eee"
        tools:srcCompat="@drawable/eee" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/update_coming_soon"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>