<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/icon_logo"
            tools:srcCompat="@drawable/icon_logo" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/accent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:textColor="@color/icons" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/accent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="@color/icons" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:divider="@color/divider"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
            android:id="@+id/btnLogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:text="@string/login"
            android:textColor="#ffffff" />

            <!--Isolated Practice Area-->

            <!--Ends here-->

            <Button
                android:id="@+id/btnRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/Register"
                android:textColor="#ffffff" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/forget_password"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


</LinearLayout>
