<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Select_Sem_SubjectFrag">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/choose_semester_and_subject"
        android:textColor="@color/accent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/Radio"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb4Sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:text="@string/_4th_sem"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb5Sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/_5th_sem"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>

    <ListView
        android:id="@+id/lvSubjects"
        android:layout_width="match_parent"
        android:layout_height="337dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:scrollbarDefaultDelayBeforeFade="5"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical" />

</LinearLayout>